psql.yaml
apiVersion: v1
kind: Pod
metadata:
  name: psql-pod
spec:
  containers:
  - name: psql-container
    image: postgres:latest
    command: ["sleep"]
    args: ["infinity"]
